cabal-version:      3.14
name:               Treasury
version:            0.1.0.0
synopsis:           TODO
-- description:
homepage:           TODO
license:            NONE
author:             Dr. Mazen Khaddaj
maintainer:         MazenKhaddaj@outlook.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common language
    default-language: GHC2024

common deps
    build-depends: base ^>=4.21.0.0

common common
    import: warnings, language, deps

executable Treasury
    import:             common
    main-is:            Main.hs
    hs-source-dirs:     app

library
    import:             common
    hs-source-dirs:     src
    exposed-modules:    Treasury
    other-modules:      Treasury.DataTypes

test-suite Treasury-test
    import:             common
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    build-depends:      Treasury,
                        tasty,
                        tasty-hunit
